# AgenticVibeCoder

./: .gitignore  ARCHITECTURE.md  AgenticVibeCoder_Prompt.md  BUILD_REPORT.md  CONTRIBUTING.md  INSTALL.md  README.md  settings.gradle.kts
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agent_bridge.js
app/src/main/assets/monaco/: monaco_editor.html
app/src/main/assets/xterm/: xterm_terminal.html
app/src/main/kotlin/com/mahavtaar/vibecoder/: MainActivity.kt  VibeCodeApp.kt
app/src/main/kotlin/com/mahavtaar/vibecoder/agent/: AgentCommandBus.kt  AgentContext.kt  AgentOrchestrator.kt  AgentSystemPrompt.kt  ReActParser.kt  WorkflowTemplates.kt
app/src/main/kotlin/com/mahavtaar/vibecoder/browser/: AndroidWebViewBridge.kt  BrowsingAgent.kt  BrowsingRateLimiter.kt  BrowsingService.kt  HttpBrowser.kt  PageState.kt  WebViewBridge.kt  WebViewProvider.kt
app/src/main/kotlin/com/mahavtaar/vibecoder/di/: AppModule.kt  BrowserModule.kt  LlmModule.kt  TerminalModule.kt  ToolsModule.kt
app/src/main/kotlin/com/mahavtaar/vibecoder/editor/: EditorJsBridge.kt  EditorViewModel.kt  FileTab.kt  FileTabManager.kt  InlineCompletion.kt  MonacoWebView.kt
app/src/main/kotlin/com/mahavtaar/vibecoder/error/: CrashReporter.kt  (+3 more)
app/src/main/res/raw/: sample_tasks.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
llama-jni/: build.gradle.kts
llama-jni/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
(+59 files in other folders)
